--- a/style.css
+++ b/style.css
@@ -11,3 +11,58 @@ Time - 7:13 PM
 
 
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+h1{
+    text-align: center;
+    font-size: 80px;
+}
+
+.calculator{
+    margin: 0 auto;
+    max-width: 350px;
+    text-align: center;
+    margin-top: 20px;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    font-size: 0;
+}
+
+.calculator:hover{
+    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.2);
+}
+
+.btn:hover{
+    background-color: tomato;
+}
+
+#result{
+    width: 335px;
+    height: 100px;
+    font-size: 32px;
+    font-weight: bold;
+    text-align: right;
+    padding: 0px 5px;
+    letter-spacing: 3px;
+}
+
+.btn{
+    width: 87px;
+    height: 70px;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 16px;
+    background-color: black;
+    color: white;
+}
+
+.btn-style{
+    background-color: slateblue;
+}
+
+.btn-equal{
+    background-color: goldenrod;
+}
